k8s/jenkins/jenkins-contour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jenkins-http-ingress
  namespace: kube-jenkins
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: jenkins.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: jenkins
      port: 8080
